syntax = "proto3";

option java_package = "com.longboilauncher.app";
option java_multiple_files = true;

message FavoriteApp {
  string package_name = 1;
  string class_name = 2;
  string label = 3;
  int32 user_identifier = 4;
  string profile = 5;
}

message UserSettings {
  string theme = 1;
  bool haptics_enabled = 2;
  bool show_notifications = 3;
  string gesture_swipe_up = 4;
  string gesture_swipe_down = 5;
  repeated string hidden_apps = 6;
  string density = 7;
  repeated FavoriteApp favorites = 8;
  string icon_pack_package_name = 9;
  map<string, string> per_app_icon_overrides = 10;
}
